--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
     <p>© ショッピングセンター スタンプラリー</p>
   </footer>
 
-  <script src="script2.js"></script> <!-- 新しいJS -->
+  <script src="script.js"></script> <!-- 新しいJS -->
 </body>
 </html>
